V3 java scheculed fixed 3